# gcAllocator

./: .gitignore  LICENSE  README.md  gcallocator.py  pyproject.toml  setup.py
.github/: COPILOT_CODING_AGENT_CUDA_FIXES.md
gcAllocator/: __init__.py
gcAllocator/src/: allocator_stats.cpp  allocator_stats.h  allocator_stats_instrument.cpp  gc_allocator_core.cpp  gc_allocator_core.h  python_bindings.cpp  retry_strategy.cpp  retry_strategy.h
tests/: advanced_example_oom.py  advanced_pytorch_example.py  test_basic_allocation.py  test_direct_allocation.py  test_proxy_pattern.py  test_stats_instrumentation.py
tests/cpp_tests/: Makefile  test_allocator_direct.cpp
